"Design" section mobile adaptation, +vars

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     <div class="overlay"></div>
 
     <div class="hero">
-      <img src="assets/hero_vanity.png">
+      <!-- <img src="assets/hero_vanity.png"> -->
+      <img class="mirror" src="assets/hero_vanity1.png">
+      <img class="vanity" src="assets/hero_vanity2.png">
     </div>
 
     <div class="description-span">
@@ -120,37 +122,66 @@
     </div>
 
     <div class="design">
-      <div class="image-description">
-        <h3><strong>DOUBLE</strong></br></h3>
-        <div class="description-group">
-          <p>
-            NATURAL</br>WOOD FINISH
-          </p>
-          <img src="/assets/description-oval-1.png">
+      <h3><strong>DOUBLE</strong></br></h3>
+
+      <span class="design-mobile-group">
+
+        <div class="image-description">
+           <h3><strong>DOUBLE</strong></br></h3> 
+          <div class="description-group">
+            <p>
+              NATURAL</br>WOOD FINISH
+            </p>
+            <img src="/assets/description-oval-1.png">
+          </div>
+
+          <div class="description-group middle-group">
+            <p>
+              WHITE</br>INTEGRATED SINK
+            </p>
+            <img src="/assets/description-oval-2.png">
+          </div>
+
+          <div class="description-group">
+            <p>
+              WALL-MOUNTED</br>MINIMALIST</br>DESIGN
+            </p>
+            <img src="/assets/description-oval-3.png">
+          </div>
         </div>
 
-        <div class="description-group middle-group">
-          <p>
-            WHITE</br>INTEGRATED SINK
-          </p>
-          <img src="/assets/description-oval-2.png">
-        </div>
+        <div class="right-image">
+          <div class="colors">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <img src="/assets/interior.png">
 
-        <div class="description-group">
-          <p>
-            WALL-MOUNTED</br>MINIMALIST</br>DESIGN
-          </p>
-          <img src="/assets/description-oval-3.png">
         </div>
-      </div>
-      <div class="right-image">
-        <div class="colors">
-          <div></div>
-          <div></div>
-          <div></div>
+      </span>
+      <div class="mobile-image-description">
+          <div class="description-group">
+            <p>
+              NATURAL</br>WOOD FINISH
+            </p>
+            <img src="/assets/description-oval-1-cut.png">
+          </div>
+
+          <div class="description-group middle-group">
+            <p>
+              WHITE</br>INTEGRATED SINK
+            </p>
+            <img src="/assets/description-oval-2-cut.png">
+          </div>
+
+          <div class="description-group">
+            <p>
+              WALL-MOUNTED</br>MINIMALIST</br>DESIGN
+            </p>
+            <img src="/assets/description-oval-3-cut.png">
+          </div>
         </div>
-        <img src="/assets/interior.png">
-      </div>
     </div>
 
     <div class="reviews">
