--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="description-span">
-      <img class="curved-quote" src="/assets/timeless_caption.png" style="max-width: 793px;">
+      <img class="curved-quote" src="assets/timeless_caption.png" style="max-width: 793px;">
       <div class="description">
         <div class="first-description">
           <div class="captions">
@@ -132,21 +132,21 @@
             <p>
               NATURAL</br>WOOD FINISH
             </p>
-            <img src="/assets/description-oval-1.png">
+            <img src="assets/description-oval-1.png">
           </div>
 
           <div class="description-group middle-group">
             <p>
               WHITE</br>INTEGRATED SINK
             </p>
-            <img src="/assets/description-oval-2.png">
+            <img src="assets/description-oval-2.png">
           </div>
 
           <div class="description-group">
             <p>
               WALL-MOUNTED</br>MINIMALIST</br>DESIGN
             </p>
-            <img src="/assets/description-oval-3.png">
+            <img src="assets/description-oval-3.png">
           </div>
         </div>
 
@@ -156,7 +156,7 @@
             <div></div>
             <div></div>
           </div>
-          <img src="/assets/interior.png">
+          <img src="assets/interior.png">
 
         </div>
       </span>
@@ -165,21 +165,21 @@
             <p>
               NATURAL</br>WOOD FINISH
             </p>
-            <img src="/assets/description-oval-1-cut.png">
+            <img src="assets/description-oval-1-cut.png">
           </div>
 
           <div class="description-group middle-group">
             <p>
               WHITE</br>INTEGRATED SINK
             </p>
-            <img src="/assets/description-oval-2-cut.png">
+            <img src="assets/description-oval-2-cut.png">
           </div>
 
           <div class="description-group">
             <p>
               WALL-MOUNTED</br>MINIMALIST</br>DESIGN
             </p>
-            <img src="/assets/description-oval-3-cut.png">
+            <img src="assets/description-oval-3-cut.png">
           </div>
         </div>
     </div>
@@ -284,13 +284,13 @@
   <footer>
     <div class="footer-logo">
       <a href="https://tkbgroupdesigns.com/residential" target="_blank">
-        <img src="/assets/logo-1.png">
+        <img src="assets/logo-1.png">
       </a>
       <a href="https://tkbgroupdesigns.com/" target="_blank">
-        <img src="/assets/logo-2.png">
+        <img src="assets/logo-2.png">
       </a>
       <a href="https://tkbgroupdesigns.com/commercial" target="_blank">
-        <img src="/assets/logo-3.png">
+        <img src="assets/logo-3.png">
       </a>
     </div>
     <div class="footer-links">
@@ -304,19 +304,19 @@
       </div>
       <div class="socials">
         <a href="https://www.facebook.com/tkbcabinetry/" target="_blank">
-          <img src="/assets/Social.png" alt="">
+          <img src="assets/Social.png" alt="">
         </a>
         <a href="https://instagram.com/tkbcabinetry/" target="_blank">
-          <img src="/assets/Social-1.png" alt="">
+          <img src="assets/Social-1.png" alt="">
         </a>
         <a href="https://www.linkedin.com/company/tkb-custom-millwork" target="_blank">
-          <img src="/assets/Social-2.png" alt="">
+          <img src="assets/Social-2.png" alt="">
         </a>
         <a href="https://share.google/Aq1xNVG9ynQnryXT4" target="_blank">
-          <img src="/assets/Social-3.png" alt="">
+          <img src="assets/Social-3.png" alt="">
         </a>
         <a href="https://ca.pinterest.com/TKB_Group/" target="_blank">
-          <img src="/assets/Social-4.png" alt="">
+          <img src="assets/Social-4.png" alt="">
         </a>
       </div>
     </div>
