Lazy-loading fix for Mac

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
     <nav class="navbar">
       <div class="navbar-container">
-        <div class="logo"><a href="https://tkbgroupdesigns.com" target="_blank"><img src="TKB.png" alt=""></a></div>
+        <div class="logo">
+          <a href="https://tkbgroupdesigns.com" target="_blank">
+            <img src="TKB.png" alt="" >
+          </a>
+        </div>
         <button class="mobile-nav-toggle" aria-label="Toggle navigation">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -34,12 +38,12 @@
 
     <div class="hero">
       <!-- <img src="assets/hero_vanity.png"> -->
-      <img class="mirror" src="assets/hero_vanity1.png">
-      <img class="vanity" src="assets/hero_vanity2.png">
+      <img class="mirror" src="assets/hero_vanity1.png" loading="lazy">
+      <img class="vanity" src="assets/hero_vanity2.png" loading="lazy">
     </div>
 
     <div class="description-span">
-      <img class="curved-quote" src="assets/timeless_caption.png" style="max-width: 793px;">
+      <img class="curved-quote" src="assets/timeless_caption.png" style="max-width: 793px;" loading="lazy">
       <div class="description">
         <div class="first-description">
           <div class="captions">
@@ -48,7 +52,7 @@
               a smart blend of drawer-heavy storage and soft-close cabinets, it’s built for couples, families, and those
               who value intentional space.</p>
           </div>
-          <img src="assets/mirror_part.png" alt="" style="max-width: 434px;">
+          <img src="assets/mirror_part.png" alt="" style="max-width: 434px;" loading="lazy">
         </div>
 
         <div class="second-description">
@@ -60,7 +64,7 @@
             <p>– Adds hotel-like luxury and function to everyday life</p>
             <p>– Designed to keep personal care items perfectly organized</p>
           </div>
-          <img src="assets/side.png" alt="" style="max-width: 521px;">
+          <img src="assets/side.png" alt="" style="max-width: 521px;" loading="lazy">
         </div>
       </div>
     </div>
@@ -71,7 +75,7 @@
           <h1><span>FLOATING</span><br>BATHROOM<br>VANITY</h1>
         </div>
         <div class="info-subsection">
-          <img src="assets/vanity-diagram.png" alt="Vanity Diagram" class="spec-image" />
+          <img src="assets/vanity-diagram.png" alt="Vanity Diagram" class="spec-image" loading="lazy"/>
         </div>
         <div class="info-subsection contact-info">
           <p><strong>Website:</strong><br>tkbgroupdesigns.com</p>
@@ -109,11 +113,11 @@
           <h3>Cabinetry Finishes</h3>
           <div class="cabinetry">
             <div>
-              <img src="assets/finish-oak.png" alt="Natural Oak" />
+              <img src="assets/finish-oak.png" alt="Natural Oak" loading="lazy"/>
               <p>Polished Chrome</p>
             </div>
             <div>
-              <img src="assets/finish-white.png" alt="Quartz 1141" />
+              <img src="assets/finish-white.png" alt="Quartz 1141" loading="lazy"/>
               <p>Quartz<br>1141 Pure White</p>
             </div>
           </div>
@@ -127,26 +131,26 @@
       <span class="design-mobile-group">
 
         <div class="image-description">
-           <h3><strong>DOUBLE</strong></br></h3> 
+          <h3><strong>DOUBLE</strong></br></h3>
           <div class="description-group">
             <p>
               NATURAL</br>WOOD FINISH
             </p>
-            <img src="assets/description-oval-1.png">
+            <img src="assets/description-oval-1.png" loading="lazy">
           </div>
 
           <div class="description-group middle-group">
             <p>
               WHITE</br>INTEGRATED SINK
             </p>
-            <img src="assets/description-oval-2.png">
+            <img src="assets/description-oval-2.png" loading="lazy">
           </div>
 
           <div class="description-group">
             <p>
               WALL-MOUNTED</br>MINIMALIST</br>DESIGN
             </p>
-            <img src="assets/description-oval-3.png">
+            <img src="assets/description-oval-3.png" loading="lazy">
           </div>
         </div>
 
@@ -156,32 +160,32 @@
             <div></div>
             <div></div>
           </div>
-          <img src="assets/interior.png">
+          <img src="assets/interior.png" loading="lazy">
 
         </div>
       </span>
       <div class="mobile-image-description">
-          <div class="description-group">
-            <p>
-              NATURAL</br>WOOD FINISH
-            </p>
-            <img src="assets/description-oval-1-cut.png">
-          </div>
-
-          <div class="description-group middle-group">
-            <p>
-              WHITE</br>INTEGRATED SINK
-            </p>
-            <img src="assets/description-oval-2-cut.png">
-          </div>
-
-          <div class="description-group">
-            <p>
-              WALL-MOUNTED</br>MINIMALIST</br>DESIGN
-            </p>
-            <img src="assets/description-oval-3-cut.png">
-          </div>
+        <div class="description-group">
+          <p>
+            NATURAL</br>WOOD FINISH
+          </p>
+          <img src="assets/description-oval-1-cut.png" loading="lazy">
         </div>
+
+        <div class="description-group middle-group">
+          <p>
+            WHITE</br>INTEGRATED SINK
+          </p>
+          <img src="assets/description-oval-2-cut.png" loading="lazy">
+        </div>
+
+        <div class="description-group">
+          <p>
+            WALL-MOUNTED</br>MINIMALIST</br>DESIGN
+          </p>
+          <img src="assets/description-oval-3-cut.png" loading="lazy">
+        </div>
+      </div>
     </div>
 
     <div class="reviews">
@@ -189,7 +193,7 @@
         <div id="desktop-layout-wrapper">
           <div id="qr-section">
             <div id="qr-background-wrapper">
-              <img src="https://i.postimg.cc/rwZb8N07/cabinetry.png" alt="QR Code">
+              <img src="https://i.postimg.cc/q7ywLc4M/qr.png" alt="QR Code" loading="lazy">
             </div>
             <h2>Scan to explore reviews</h2>
             <p>or leave your own feedback.</p>
@@ -205,11 +209,13 @@
               <div id="rating-info">
                 <div id="rating-score-stars">
                   <span id="score-text">4.4/5</span>
-                  <img id="stars-visual-img" src="https://i.postimg.cc/hjLRkhn3/4k-stars.png" alt="Star Rating">
+                  <img id="stars-visual-img" src="https://i.postimg.cc/hjLRkhn3/4k-stars.png" alt="Star Rating"
+                    loading="lazy">
                 </div>
                 <div id="rating-source">
                   <span id="on-google-text">on Google</span>
-                  <img id="google-logo" src="https://i.postimg.cc/50qDPG5h/4k-google-logo.png" alt="Google Logo">
+                  <img id="google-logo" src="https://i.postimg.cc/50qDPG5h/4k-google-logo.png" alt="Google Logo"
+                    loading="lazy">
                 </div>
               </div>
             </a>
@@ -284,13 +290,13 @@
   <footer>
     <div class="footer-logo">
       <a href="https://tkbgroupdesigns.com/residential" target="_blank">
-        <img src="assets/logo-1.png">
+        <img src="assets/logo-1.png" loading="lazy">
       </a>
       <a href="https://tkbgroupdesigns.com/" target="_blank">
-        <img src="assets/logo-2.png">
+        <img src="assets/logo-2.png" loading="lazy">
       </a>
       <a href="https://tkbgroupdesigns.com/commercial" target="_blank">
-        <img src="assets/logo-3.png">
+        <img src="assets/logo-3.png" loading="lazy">
       </a>
     </div>
     <div class="footer-links">
@@ -304,19 +310,19 @@
       </div>
       <div class="socials">
         <a href="https://www.facebook.com/tkbcabinetry/" target="_blank">
-          <img src="assets/Social.png" alt="">
+          <img src="assets/Social.png" alt="" loading="lazy">
         </a>
         <a href="https://instagram.com/tkbcabinetry/" target="_blank">
-          <img src="assets/Social-1.png" alt="">
+          <img src="assets/Social-1.png" alt="" loading="lazy">
         </a>
         <a href="https://www.linkedin.com/company/tkb-custom-millwork" target="_blank">
-          <img src="assets/Social-2.png" alt="">
+          <img src="assets/Social-2.png" alt="" loading="lazy">
         </a>
         <a href="https://share.google/Aq1xNVG9ynQnryXT4" target="_blank">
-          <img src="assets/Social-3.png" alt="">
+          <img src="assets/Social-3.png" alt="" loading="lazy">
         </a>
         <a href="https://ca.pinterest.com/TKB_Group/" target="_blank">
-          <img src="assets/Social-4.png" alt="">
+          <img src="assets/Social-4.png" alt="" loading="lazy">
         </a>
       </div>
     </div>
